Make sure images aren't too tall for the viewport

--- a/revealjs-main.scss
+++ b/revealjs-main.scss
@@ -125,6 +125,9 @@ html {
     }
     // Hide single images so we can use data-background-image
     & > figure {
+      & > img {
+	max-height: 90vh;
+      }
       & > img:not(.r-stretch):not(.r-stack):not(.overlay-slide),
       & > video:not(.r-stretch):not(.r-stack):not(.overlay-slide) {
 	visibility: hidden;
